fix issues when uploading file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,13 @@ spring.datasource.password=root1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Set up Hibernate for database schema generation
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
+
+# Enable multipart file uploads
+spring.servlet.multipart.enabled=true
+
+# Maximum file size for uploads
+spring.servlet.multipart.max-file-size=10MB
+
+# Maximum request size for multipart/form-data
+spring.servlet.multipart.max-request-size=10MB
