--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,25 +2,31 @@
 spring.application.name=document
 
 # Specifies the URL of the database
-spring.datasource.url=jdbc:postgresql://localhost:5433/system
+spring.datasource.url=${DATABASE_URL}
 
 # Username used to connect to the database
-spring.datasource.username=postgres
+spring.datasource.username=${DATABASE_USERNAME}
 
 # Password used to connect to the database
-spring.datasource.password=root1234
+spring.datasource.password=${DATABASE_PASSWORD}
 
 # Name of the JDBC driver class for Postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Set up Hibernate for database schema generation
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
+
+# Determines the number of inserts at one call
+spring.jpa.properties.hibernate.jdbc.batch_size: 500
+
+# Ensures that hibernate inserts data in the correct order
+spring.jpa.properties.hibernate.order_inserts: true
 
 # Enable multipart file uploads
 spring.servlet.multipart.enabled=true
 
 # Maximum file size for uploads
-spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-file-size=200MB
 
 # Maximum request size for multipart/form-data
-spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.max-request-size=200MB
