insert hibernate dialect

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,9 @@ spring.datasource.password=${DATABASE_PASSWORD}
 # Name of the JDBC driver class for Postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# Name of the hibernate dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 # Set up Hibernate for database schema generation
 spring.jpa.hibernate.ddl-auto=create
 
