--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,5 @@ spring.servlet.multipart.max-file-size=200MB
 
 # Maximum request size for multipart/form-data
 spring.servlet.multipart.max-request-size=200MB
+
+spring.ai.openai.api-key=${OPENAI_API_KEY}
